Add collapsible CV, CSS adjustments, Nakuru pt1 Table of Contents

--- a/_posts/2021-08-30-nakuru-pt1.md
+++ b/_posts/2021-08-30-nakuru-pt1.md
@@ -23,6 +23,13 @@ Having spent close to three wonderful years in Kenya, with fond memories of Naku
 
 So let's get started.
 
+- [Getting the data](#getting-the-data)
+- [Layer Stacking and Subsetting](#layer-stacking-and-subsetting)
+- [First visual explorations](#first-visual-explorations)
+- [Collecting and merging signatures](#collecting-and-merging-signatures)
+- [Cleaning up](#cleaning-up)
+- [Final output and analysis](#final-output-and-analysis)
+
 ### Getting the data
 
 As we will be working with Landsat data, we first need to create an account at [USGS Earth Explorer](https://earthexplorer.usgs.gov/). The same account can be used for [USGS GloVis](https://glovis.usgs.gov/app) which has a slightly more userfriendly interface and is a great alternative whenever Earth Explorer is down.
