Post Nakuru series part 2

--- a/_posts/2021-08-30-nakuru-pt1.md
+++ b/_posts/2021-08-30-nakuru-pt1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Remote sensing urban growth in Nakuru, Kenya - Part 1
+title: Remote sensing urban growth in Nakuru, Kenya (1) | ERDAS IMAGINE
 subtitle: 'Data: Landsat 5-8 | Tools: ERDAS IMAGINE, ArcGIS Pro'
 description: >-
   This post looks back at some early forays into remote sensing, using ERDAS IMAGINE, ArcGIS Pro and good ol' PowerPoint to build a straight-forward research poster.
@@ -12,6 +12,7 @@ category: blog
 tags:
   - remote sensing
   - urban growth
+  - ERDAS IMAGINE
 author: gregorherda
 paginate: true
 ---
