Update Nakuru series part 2, update CV

--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Remote sensing urban growth in Nakuru, Kenya (2) | geemap + Google Earth Engine
+title: Remote sensing Nakuru's urban growth (2) | geemap + Google Earth Engine
 subtitle: 'Data: Landsat 7-8 | Tools: geemap (Google Earth Engine), Jupyter-Notebook'
 description: >-
   This post uses Wu Qiusheng's excellent geemap Python package to conduct a supervised classification using Google Earth Engine's machine learning algorithms. 
@@ -20,22 +20,24 @@ paginate: true
 ---
 _This is the second in a three part series telling the  story of Nakuru's urban expansion using different technologies. While [Part 1](https://gregorhd.github.io/nakuru-pt1/) employed proprietary software (ERDAS IMAGINE) to produce static images, Part 2 will employ the open-source [geemap](https://geemap.org/) package and the [Jupyter Notebook](https://jupyter.org/) to source the data from the [Google Earth Engine Data Catalog](https://developers.google.com/earth-engine/datasets), conduct a supervised classification in the cloud and produce an interactive map - all without having to download a single large datasets to your harddrive._
 
-If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and making your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o).
+If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and making your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
 
-- [Imports and region of interest](#imports-and-region-of-interest)
+You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a>.
+
+- [Getting started](#getting-started)
 - [Adding a reference layer and generating sample points](#adding-a-reference-layer-and-generating-sample-points)
 - [Training the classifier](#training-the-classifier)
 - [Classifying a Landsat 8 scene from 2020](#classifying-a-landsat-8-scene-from-2020)
-- [Simplify land cover classes](#simplify-land-cover-classes)
+- [Simplifying land cover classes](#simplifying-land-cover-classes)
 - [Classifying a Landsat 8 scene from 2013](#classifying-a-landsat-8-scene-from-2013)
 - [Classifying a Landsat 7 scene from 2002](#classifying-a-landsat-7-scene-from-2002)
 - [Final output](#final-output)
 - [Saving to HTML](#saving-to-html)
 - [Annex - Manual sample collection](#annex---manual-sample-collection)
 
-## Imports and region of interest
+## Getting started
 
-We first import `geemap` and the GEE Python API, defining the region of interest we already used in [Part 1](https://gregorhd.github.io/nakuru-pt1/). We then instantiate a *geemap* `Map` object and center the resulting *leaflet* map on our region of interest to get our bearings.
+We first import `geemap` and the GEE Python API. We then define the region of interest we already used in [Part 1](https://gregorhd.github.io/nakuru-pt1/). Finally, we instantiate a *geemap* `Map` object and center the resulting *leaflet* map on our region of interest to get our bearings.
 
 
 ```python
@@ -107,12 +109,12 @@ copernicus_lc = ee.ImageCollection("COPERNICUS/Landcover/100m/Proba-V-C3/Global"
     .clip(roi)
 
 print("Landsat 8 date of acquisition: ", ee.Date(L8_2018.get('system:time_start')).format('YYYY-MM-dd').getInfo())
-print("Copernicus date of issuance: ", ee.Date(copernicus_lc.get('system:time_start')).format('YYYY-MM-dd').getInfo())
+print("Copernicus issue date: ", ee.Date(copernicus_lc.get('system:time_start')).format('YYYY-MM-dd').getInfo())
 
 ```
 
     Landsat 8 date of acquisition:  2018-10-03
-    Copernicus date of issuance:  2019-01-01
+    Copernicus issue date:  2019-01-01
     
 
 Next, we'll generate a `FeatureCollection` of 10,000 random points across our ROI and have each point sample the land cover classification data from Copernicus (as can be seen by examining the first point in the `FeatureCollection` below).
@@ -157,9 +159,9 @@ training = L8_2018.select(bands).sampleRegions(**{
   'scale': 30
 })
 
-# Here we chose the Random Forest algorithm with 15 decision trees.
+# Here we choose the Random Forest algorithm with 15 decision trees.
 # Feel free to experiment with either this number or any of the other algorithms available.
-# Some, like Support Vector Machines will take significantly longer to complete.
+# Some, like Support Vector Machines, will take significantly longer to complete.
 # see here and following: https://developers.google.com/earth-engine/apidocs/ee-classifier-amnhmaxent
 classifier = ee.Classifier.smileRandomForest(15).train(training, label, bands)
 ```
@@ -174,7 +176,7 @@ print(training.first().getInfo())
 
 ## Classifying a Landsat 8 scene from 2020
 
-This is where the rubber hits the road and we actually classify a Landsat 8 scene based on the Copernicus training data we just collected. The scene we're going to classify, however, will not be the one we used for training but instead the  exact same scene we manually classified in Part 1.
+This is where the rubber hits the road and we actually classify a Landsat 8 scene based on the Copernicus training data we just collected. The scene we're going to classify, however, will not be the one we used for training but instead the same scene we manually classified in Part 1.
 
 
 ```python
@@ -201,11 +203,11 @@ Map
     frameborder="0">
 </iframe>
 
-## Simplify land cover classes
+## Simplifying land cover classes
 
 Our brains have difficulty differentiating more than 10 or 12 colors at a time, let alone 23 as in this case. That's why it will make sense to merge many of the classes into one. In our case, four main classes may be enough to tell a compelling story.
 
-But first, we need to understand which of the numeric values correspond to which real-world land cover classes. For this we extract the class names and values form the original Copernicus dataset, and 'zip' these two lists into one.
+But first, we need to understand which of the numeric values correspond to which real-world land cover classes. For this we, we could either simply check the discrete_classification Class Table on [this](https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_Landcover_100m_Proba-V-C3_Global#bands) page, or extract the class names and values form the dataset itself, and 'zip' these two lists into one.
 
 
 ```python
@@ -283,7 +285,7 @@ new = urban_new + natveg_new + nonurb_new + water_new
 final_2020 = result_2020.remap(orig, new)
 ```
 
-Lastly, we define legend keys and define an ordered color palette which will inform both our `vis_params` in the `addLayer` method as well as the symbology for our legend.
+Lastly, we define legend keys and an ordered color palette which will inform both our `vis_params` in the `addLayer` method as well as the symbology for our legend. **Note:** Custom widgets like the legend are currently not exported by *ipyleaflet* when saving to HTML, which is why you will not see it on here. Check out *geemap*'s instructions for hosting your apps via Heroku to make use of all custom widgets. [This](#anchor) is what the legend looks like within the Jupyter Notebook.
 
 
 ```python
@@ -408,9 +410,9 @@ Map.addLayer(final_2002, {'palette': class_palette}, 'Landcover (2002)')
 
 ## Final output
 
-And this is the final result. You can tick and untick the three layers to compare the last ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
+And this is the final result. You can tick and untick the three layers to compare. The bottom-most ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
 
-As always, critique, comments or encouragement are more than welcome.
+As always, critique and comments are more than welcome.
 
 <iframe src="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_pt2_4.html"
     sandbox="allow-same-origin allow-scripts"
@@ -420,6 +422,10 @@ As always, critique, comments or encouragement are more than welcome.
     seamless="seamless"
     frameborder="0">
 </iframe>
+
+<a name="anchor"></a>
+![geemap Jupyter screenshot](/assets/img/uploads/2021-10-07-nakuru-pt2/jupyter_screenshot.png)
+
 
 ## Saving to HTML
 
@@ -520,7 +526,7 @@ points2 = urban.merge(natveg).merge(nonurb).merge(water)
 points2.size().getInfo()
 ```
 
-Everything from here on out is going to be a replication from above, so no surprises there.
+Everything from here on out is replicating what we did above.
 
 ```python
 # Slight adjustments to the bands since L7's are different to L8's, as well as the label we chose above
