--- a/_posts/2021-08-30-nakuru-pt1.md
+++ b/_posts/2021-08-30-nakuru-pt1.md
@@ -3,12 +3,12 @@ layout: post
 title: Remote sensing Nakuru's urban growth (1) | ERDAS IMAGINE
 subtitle: 'Data: Landsat 5-8 | Tools: ERDAS IMAGINE, ArcGIS Pro'
 description: >-
-  This post looks back at some early forays into remote sensing, using ERDAS IMAGINE, ArcGIS Pro and good ol' PowerPoint to build a straight-forward research poster.
+  A supervised classification using ERDAS IMAGINE.
 image: >-
   /assets/img/uploads/2021-08-30-nakuru-pt1/cover.jpg
 optimized_image: >-
   /assets/img/uploads/2021-08-30-nakuru-pt1/thumb.png
-category: blog
+category: how-to
 tags:
   - remote sensing
   - urban growth
