--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -3,12 +3,12 @@ layout: post
 title: Remote sensing Nakuru's urban growth (2) | geemap + Google Earth Engine
 subtitle: 'Data: Landsat 7-8 | Tools: geemap (Google Earth Engine), Jupyter-Notebook'
 description: >-
-  This post uses Wu Qiusheng's excellent geemap Python package to conduct a supervised classification using Google Earth Engine's machine learning algorithms. 
+  A supervised classification using the geemap Python package and Google Earth Engine. 
 image: >-
   /assets/img/uploads/2021-10-07-nakuru-pt2/thumb.png
 optimized_image: >-
   /assets/img/uploads/2021-10-07-nakuru-pt2/thumb.png
-category: blog
+category: how-to
 tags:
   - remote sensing
   - urban growth
@@ -20,7 +20,7 @@ paginate: true
 ---
 _This is the second in a three part series telling the  story of Nakuru's urban expansion using different technologies. While [Part 1](https://gregorhd.github.io/nakuru-pt1/) employed proprietary software (ERDAS IMAGINE) to produce static images, Part 2 will employ the open-source [geemap](https://geemap.org/) package and the [Jupyter Notebook](https://jupyter.org/) to source the data from the [Google Earth Engine Data Catalog](https://developers.google.com/earth-engine/datasets), conduct a supervised classification in the cloud and produce an interactive map - all without having to download a single large datasets to your harddrive._
 
-If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and making your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
+If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and taking your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
 
 You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a>.
 
