Update Nakuru pt2 to embedding static images

--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -15,14 +15,15 @@ tags:
   - geemap
   - Google Earth Engine
   - machine learning
+  - Python
 author: gregorherda
 paginate: true
 ---
 _This is the second in a three part series telling the  story of Nakuru's urban expansion using different technologies. While [Part 1](https://gregorhd.github.io/nakuru-pt1/) employed proprietary software (ERDAS IMAGINE) to produce static images, Part 2 will employ the open-source [geemap](https://geemap.org/) package and the [Jupyter Notebook](https://jupyter.org/) to source the data from the [Google Earth Engine Data Catalog](https://developers.google.com/earth-engine/datasets), conduct a supervised classification in the cloud and produce an interactive map - all without having to download a single large datasets to your harddrive._
 
-If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and taking your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
+If this is your first time working with *geemap*, or virtual *conda* environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and taking your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
 
-You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a>.
+You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a> which will allow you to avail of the interactive features.
 
 - [Getting started](#getting-started)
 - [Adding a reference layer and generating sample points](#adding-a-reference-layer-and-generating-sample-points)
@@ -56,15 +57,7 @@ Map = geemap.Map()
 Map.centerObject(roi, zoom=11)
 Map
 ```
-
-<iframe src="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_pt2_1.html"
-    sandbox="allow-same-origin allow-scripts"
-    width="100%"
-    height="500"
-    scrolling="no"
-    seamless="seamless"
-    frameborder="0">
-</iframe>
+![map insert](/assets/img/uploads/2021-10-07-nakuru-pt2/map1.png)
 
 Next we add a Landsat 8 scene from around the time (2018-19) of the latest issue of the 100m resolution [Copernicus CGLS-LC100 Collection 3](https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_Landcover_100m_Proba-V-C3_Global) land cover dataset which we will use to train a classifier. While not a perfect match, this should be a sufficient approximation. We sort the `ImageCollection` by cloud cover, select the first of these and clip the scene to our region of interest.
 
@@ -194,14 +187,7 @@ result_2020 = L8_2020.select(bands).classify(classifier)
 Map.addLayer(result_2020.randomVisualizer(), {}, 'Landcover (random colors)')
 Map
 ```
-<iframe src="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_pt2_2.html"
-    sandbox="allow-same-origin allow-scripts"
-    width="100%"
-    height="500"
-    scrolling="no"
-    seamless="seamless"
-    frameborder="0">
-</iframe>
+![map insert](/assets/img/uploads/2021-10-07-nakuru-pt2/map2.png)
 
 ## Simplifying land cover classes
 
@@ -285,7 +271,7 @@ new = urban_new + natveg_new + nonurb_new + water_new
 final_2020 = result_2020.remap(orig, new)
 ```
 
-Lastly, we define legend keys and an ordered color palette which will inform both our `vis_params` in the `addLayer` method as well as the symbology for our legend. **Note:** Custom widgets like the legend are currently not exported by *ipyleaflet* when saving to HTML, which is why you will not see it on here. Check out *geemap*'s instructions for hosting your apps via Heroku to make use of all custom widgets. [This](#anchor) is what the legend looks like within the Jupyter Notebook.
+Lastly, we define legend keys and an ordered color palette which will inform both our `vis_params` in the `addLayer` method as well as the symbology for our legend.
 
 
 ```python
@@ -303,14 +289,7 @@ Map.remove_layer(Map.find_layer('Landcover (random colors)'))
 
 Map
 ```
-<iframe src="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_pt2_3.html"
-    sandbox="allow-same-origin allow-scripts"
-    width="100%"
-    height="500"
-    scrolling="no"
-    seamless="seamless"
-    frameborder="0">
-</iframe>
+![map insert](/assets/img/uploads/2021-10-07-nakuru-pt2/map3.png)
 
 ## Classifying a Landsat 8 scene from 2013
 
@@ -407,24 +386,13 @@ final_2002 = result_2002.remap(orig, new).clip(roi)
 
 Map.addLayer(final_2002, {'palette': class_palette}, 'Landcover (2002)')
 ```
-
 ## Final output
 
-And this is the final result. You can tick and untick the three layers to compare. The bottom-most ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
+And this is the final result. You can tick and untick the three layers and adjust the layer opacity via the slider widgets in the layer control. The bottom-most ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
 
 As always, critique and comments are more than welcome.
 
-<iframe src="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_pt2_4.html"
-    sandbox="allow-same-origin allow-scripts"
-    width="100%"
-    height="500"
-    scrolling="no"
-    seamless="seamless"
-    frameborder="0">
-</iframe>
-
-<a name="anchor"></a>
-![geemap Jupyter screenshot](/assets/img/uploads/2021-10-07-nakuru-pt2/jupyter_screenshot.png)
+![map insert](/assets/img/uploads/2021-10-07-nakuru-pt2/map4.png)
 
 
 ## Saving to HTML
@@ -455,7 +423,6 @@ But what do you do if you don't have a very good (or any) training dataset or si
 We will have to collect at least 20 sample points for each information class we plan to classify. Every time we're done sampling, we need to assign the drawn features to a `FeatureCollection` and define a property for each feature. This then tells the classifier which landcover class we think this pixel represents. It helps to inspect the spectral profile of each area or pixel via the "Plotting" tool in the control panel prior to placing a marker, to confirm that the spectral profile matches with the type of landcover we're currently collecting samples for. Adjusting the `vis_params` to other band combinations (e.g. 4-3-2 for vegetation or 4-5-3 for urban) may also help to visually hone in on certain areas.
 
 So let's get to it.
-
 
 ```python
 # First, place at least 20 markers onto urban areas using any map instance created.
