Fix Nakuru pt1 typo

--- a/_posts/2021-08-30-nakuru-pt1.md
+++ b/_posts/2021-08-30-nakuru-pt1.md
@@ -16,7 +16,7 @@ tags:
 author: gregorherda
 paginate: true
 ---
-_This is the first in a three part series telling the  story of Nakuru's urban expansion using different technologies. Part 1 looks at the most basic kind of medium, a timeseries of thematic maps distributed like most traditional cartographic product in the form of static images. The tools used here are, unfortunately, for-pay though Parts 2 and 3 will then turn towards Google Earth Engine (free) and some of my favourite interactive visualisation libraries in the Python ecosystem (free and open-source)._
+_This is the first in a three part series telling the  story of Nakuru's urban expansion using different technologies. Part 1 looks at the most basic kind of medium, a timeseries of thematic maps distributed like most traditional cartographic products in the form of static images. The tools used here are, unfortunately, for-pay though [Part 2](https://gregorhd.github.io/nakuru-pt2/) and 3 will then turn towards Google Earth Engine (free) and some of my favourite interactive visualisation libraries in the Python ecosystem (free and open-source)._
 
 This first installment shamelessly rehashes my very first assignment from college days where I chose to examine the incredible urban expansion of Nakuru, Kenya, between 2002 and 2020, as emblematic of many second and third tier cities in the Global South. These are the places where most of the future urban growth [is projected](https://www.un.org/development/desa/publications/2018-revision-of-world-urbanization-prospects.html) to take place. At the same time, these are the places which [urban research](https://onlinelibrary.wiley.com/doi/10.1111/j.1468-2427.2009.00886.x) in general and [urban remote sensing studies](https://www.sciencedirect.com/science/article/abs/pii/S0034425720301097) in particular consistently bypass.
 
@@ -29,7 +29,7 @@ So let's get started.
 - [First visual explorations](#first-visual-explorations)
 - [Collecting and merging signatures](#collecting-and-merging-signatures)
 - [Cleaning up](#cleaning-up)
-- [Final output and analysis](#final-output-and-analysis)
+- [Final output](#final-output)
 
 ### Getting the data
 
@@ -103,7 +103,7 @@ Finally, I applied a 3x3 majority filter to make the urban sections stand out mo
 |-------------------------|----------------------|
 |![no filter](assets/img/../../../assets/img/uploads/2021-08-30-nakuru-pt1/2020_nofilter.png)|![no filter](assets/img/../../../assets/img/uploads/2021-08-30-nakuru-pt1/2020_filter.png)|
 
-### Final output and analysis
+### Final output
 
 And here are the fruits of our labour.
 
