Add link to Nakuru pt2 live heroku app

--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -25,6 +25,8 @@ If this is your first time working with *geemap*, or virtual *conda* environment
 
 You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a> which will allow you to avail of the interactive features.
 
+Or directly jump to the **live app** [here](https://nakuru-pt2.herokuapp.com/), built using [heroku](https://heroku.com).
+
 - [Getting started](#getting-started)
 - [Adding a reference layer and generating sample points](#adding-a-reference-layer-and-generating-sample-points)
 - [Training the classifier](#training-the-classifier)
@@ -33,7 +35,6 @@ You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/
 - [Classifying a Landsat 8 scene from 2013](#classifying-a-landsat-8-scene-from-2013)
 - [Classifying a Landsat 7 scene from 2002](#classifying-a-landsat-7-scene-from-2002)
 - [Final output](#final-output)
-- [Saving to HTML](#saving-to-html)
 - [Annex - Manual sample collection](#annex---manual-sample-collection)
 
 ## Getting started
@@ -44,6 +45,7 @@ We first import `geemap` and the GEE Python API. We then define the region of in
 ```python
 import geemap
 import ee
+import ipywidgets as widgets
 ee.Initialize()
 
 roi = ee.Geometry.Polygon(
@@ -385,36 +387,31 @@ new = urban_new + natveg_new + nonurb_new + water_new
 final_2002 = result_2002.remap(orig, new).clip(roi)
 
 Map.addLayer(final_2002, {'palette': class_palette}, 'Landcover (2002)')
+
+# finally, we can add some sliders to more directly control the opacity
+
+lc_2002 = Map.layers[-1]
+lc_2013 = Map.layers[-2]
+lc_2020 = Map.layers[-3]
+
+opacity_2002 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description="2002")
+opacity_2013 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description="2013")
+opacity_2020 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description="2020")
+
+lc_2002.interact(opacity=opacity_2002)
+lc_2013.interact(opacity=opacity_2013)
+lc_2020.interact(opacity=opacity_2020)
+
+hbox = widgets.HBox([opacity_2002, opacity_2013, opacity_2020])
+hbox
 ```
 ## Final output
 
-And this is the final result. You can tick and untick the three layers and adjust the layer opacity via the slider widgets in the layer control. The bottom-most ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
+And [this](https://nakuru-pt2.herokuapp.com/) is the final result. You can tick and untick the three layers and adjust the layer opacity via the slider widgets at above the map or in the layer control in the top right. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
 
 As always, critique and comments are more than welcome.
 
 ![map insert](/assets/img/uploads/2021-10-07-nakuru-pt2/map4.png)
-
-
-## Saving to HTML
-
-At the time of writing I had to also install the _leafmap_ package for the exported HTML to properly open in the browser, possibly due to some recent _ipyleaflet_ updates. If this is the case for you too, simply run
-
-`conda install -c conda-forge leafmap`
-
-before proceeding. Occasionally, `leafmap.update_package()`, followed by a kernel restart may also be necessary.
-
-
-```python
-# Save the map to your Downloads folder
-import os
-
-download_dir = os.path.join(os.path.expanduser('~'), 'Downloads')
-if not os.path.exists(download_dir):
-    os.makedirs(download_dir)
-html_file = os.path.join(download_dir, 'Nakuru_pt2.html')
-
-Map.to_html(outfile=html_file, title='Remote sensing urban growth in Nakuru, Kenya - Part 2', width='100%', height='880px')
-```
 
 ## Annex - Manual sample collection
 
