--- a/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb
+++ b/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb
@@ -15,6 +15,8 @@
    "source": [
     "If this is your first time working with _geemap_, or virtual conda environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and making your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o).\n",
     "\n",
+    "You can jump directly to the **live app** [here](https://nakuru-pt2.herokuapp.com/), built using [heroku](https://heroku.com).\n",
+    "\n",
     "### Getting started\n",
     "\n",
     "We first import `geemap` and the GEE Python API, defining the region of interest we already used in [Part 1](https://gregorhd.github.io/nakuru-pt1/). We then instantiate a *geemap* `Map` object and center the resulting *leaflet* map on our region of interest to get our bearings."
@@ -29,7 +31,8 @@
    "source": [
     "import geemap\n",
     "import ee\n",
-    "ee.Initialize()"
+    "import ipywidgets as widgets\n",
+    "geemap.ee_initialize()"
    ]
   },
   {
@@ -489,6 +492,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abc3479e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# finally, we can add some sliders to more directly control the opacity\n",
+    "\n",
+    "lc_2002 = Map.layers[-1]\n",
+    "lc_2013 = Map.layers[-2]\n",
+    "lc_2020 = Map.layers[-3]\n",
+    "\n",
+    "opacity_2002 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description=\"2002\")\n",
+    "opacity_2013 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description=\"2013\")\n",
+    "opacity_2020 = widgets.FloatSlider(min=0, max=1, step=0.1, value=1, description=\"2020\")\n",
+    "\n",
+    "lc_2002.interact(opacity=opacity_2002)\n",
+    "lc_2013.interact(opacity=opacity_2013)\n",
+    "lc_2020.interact(opacity=opacity_2020)\n",
+    "\n",
+    "hbox = widgets.HBox([opacity_2002, opacity_2013, opacity_2020])\n",
+    "hbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69d16d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Map"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "af9b341f",
    "metadata": {},
@@ -498,48 +538,6 @@
     "And this is the final result. You can tick and untick the three layers to compare. The bottom-most ticked layer in the layer manager is always the 'top' layer visible. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.\n",
     "\n",
     "As always, critique and comments are more than welcome."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80e1ceb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Map"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6dbdaeac",
-   "metadata": {},
-   "source": [
-    "### Saving to HTML\n",
-    "\n",
-    "At the time of writing I had to also install the _leafmap_ package for the exported HTML to properly open in the browser, possibly due to some recent _ipyleaflet_ updates. If this is the case for you too, simply run\n",
-    "\n",
-    "`conda install -c conda-forge leafmap`\n",
-    "\n",
-    "before proceeding. Occasionally, `leafmap.update_package()`, followed by a kernel restart may also be necessary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bd008e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the map to your Downloads folder\n",
-    "import os\n",
-    "\n",
-    "download_dir = os.path.join(os.path.expanduser('~'), 'Downloads')\n",
-    "if not os.path.exists(download_dir):\n",
-    "    os.makedirs(download_dir)\n",
-    "html_file = os.path.join(download_dir, 'Nakuru_pt2.html')\n",
-    "\n",
-    "Map.to_html(outfile=html_file, title='Remote sensing urban growth in Nakuru, Kenya - Part 2', width='100%', height='880px')"
    ]
   },
   {
