Add post OSM to Bokeh Server, standardise thumbnails

--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -25,7 +25,7 @@ If this is your first time working with *geemap*, or virtual *conda* environment
 
 You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a> which will allow you to avail of the interactive features.
 
-Or directly jump to the **live app** [here](https://nakuru-pt2.herokuapp.com/), built using [heroku](https://heroku.com).
+Or directly jump to the **live app** [here](https://nakuru-pt2.herokuapp.com/) (it may take about 30 seconds to load), built using [heroku](https://heroku.com).
 
 - [Getting started](#getting-started)
 - [Adding a reference layer and generating sample points](#adding-a-reference-layer-and-generating-sample-points)
@@ -407,7 +407,7 @@ hbox
 ```
 ## Final output
 
-And [this](https://nakuru-pt2.herokuapp.com/) is the final result. You can tick and untick the three layers and adjust the layer opacity via the slider widgets at above the map or in the layer control in the top right. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
+And [this](https://nakuru-pt2.herokuapp.com/) is the final result. You can tick and untick the three layers and adjust the layer opacity via the slider widgets above the map or in the layer control in the top right. Due to the two satellites and training datasets involved, the results are not 100% comparable, but close enough. You will also see significant differences in classification between the results here and those in Part 1. There are plenty of moving parts and, if your are so inclined, you are free to experiment both with other training datasets and classifiers at your disposal, each with their own set of parameters. In any case, the main purpose here was to introduce the significant capabilities of both _geemap_, Google Earth Engine and the Python environment for scalable remote sensing applications.
 
 As always, critique and comments are more than welcome.
 
