--- a/_posts/2021-10-05-nakuru-pt2.md
+++ b/_posts/2021-10-05-nakuru-pt2.md
@@ -19,11 +19,11 @@ tags:
 author: gregorherda
 paginate: true
 ---
-_This is the second in a three part series telling the  story of Nakuru's urban expansion using different technologies. While [Part 1](https://gregorhd.github.io/nakuru-pt1/) employed proprietary software (ERDAS IMAGINE) to produce static images, Part 2 will employ the open-source [geemap](https://geemap.org/) package and the [Jupyter Notebook](https://jupyter.org/) to source the data from the [Google Earth Engine Data Catalog](https://developers.google.com/earth-engine/datasets), conduct a supervised classification in the cloud and produce an interactive map - all without having to download a single large datasets to your harddrive._
+_This is the second in a three part series telling the  story of Nakuru's urban expansion using different technologies. While <a href="/nakuru-pt1/">Part 1</a> employed proprietary software (ERDAS IMAGINE) to produce static images, Part 2 will employ the open-source [geemap](https://geemap.org/) package and the [Jupyter Notebook](https://jupyter.org/) to source the data from the [Google Earth Engine Data Catalog](https://developers.google.com/earth-engine/datasets), conduct a supervised classification in the cloud and produce an interactive map - all without having to download a single large datasets to your harddrive._
 
 If this is your first time working with *geemap*, or virtual *conda* environments, geemap's [tutorials](https://geemap.org/tutorials/#3-introducing-the-inspector-tool-for-earth-engine-python-api) will guide you through installing the package and taking your first steps. The workflow below partly follows _geemap_ tutorial [no. 32](https://youtu.be/qWaEfgWi21o). 
 
-You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a> which will allow you to avail of the interactive features.
+**Downloads**: You can download the accompanying Jupyter Notebook <a href="/assets/img/uploads/2021-10-07-nakuru-pt2/Nakuru_RS_pt2.ipynb">here</a> which will allow you to avail of the interactive features.
 
 Or directly jump to the **live app** [here](https://nakuru-pt2.herokuapp.com/) (it may take about 30 seconds to load), built using [heroku](https://heroku.com).
 
